--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
     <body>
-
+        <div class="container">
+            <div class="jumbotron text-center">
+                <h1><strong>Game of Thrones Trivia!</strong></h1>
+                <button class="btn-primary" id="play">You Know Nothing</button>
+                <div id="quiz-area" class="col-md-10">
+                </div>
+            </div>
+        </div>
     </body>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </html>
